<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isOffline"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible"
        showIf="@{isOffline}"
        android:background="@drawable/dashboard_gradient_bg"
        android:elevation="2dp"
        >

        <TextView
            android:id="@+id/textHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/msg_oops_no_internet_connection"
            android:textSize="@dimen/textLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            />


        <ImageView
            android:id="@+id/imageIllustration"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginVertical="@dimen/dimenMed"
            android:src="@drawable/img_no_internet_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHeading"
            />

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_please_check_and_try_again"
            android:textSize="@dimen/textRegular"
            android:layout_marginVertical="@dimen/dimenMed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageIllustration"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetry"
            style="@style/AuthButtonStyleSmaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="56dp"
            android:background="@drawable/btn_auth_state"
            android:text="@string/action_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMessage"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>